--- a/HTMLTest/WebContent/homepage/mystyle.css
+++ b/HTMLTest/WebContent/homepage/mystyle.css
@@ -4,18 +4,28 @@ body {
 	margin: 100px auto;
 }
 header {
-	border: 3px solid red;
+	padding: 15px;
+	vertical-align: middle;
+}
+header img {
+	display: inline;
+	width: 50px;
+}
+header h1 {
+	margin-left: 10px;
+	display: inline;
 }
 
 nav {
-	border: 3px solid blue;
+	border: 1px solid #6633CC;
+	background-color: white;
 }
 #menubar {
 	text-align: center;
 }
 #menubar li{
 	display: inline;
-	padding: 30px;
+	padding: 0 30px;
 	letter-spacing: 3px;
 }
 #menubar a {
@@ -23,9 +33,9 @@ nav {
 }
 
 aside {
-	border: 3px solid green;
 	width: calc(17.5% - 21px);
 	height: 600px;
+	background-color: #CCCCFF;
 }
 aside#left{
 	float: left;
@@ -35,34 +45,50 @@ aside#left{
 }
 #category li {
 	display: block;
-	background-color: #CCCCCC;
-	border: 1px solid #666666;
+	background-color: #9999CC;
+	color: white;
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
 	cursor: pointer;
 	padding:15px;
 }
+#category li:hover {
+	background-color: #333399;
+}
 
 aside#right{
+	border-right: 1px solid black;
 	float: right;
 	padding: 0 15px;
 }
 aside#right button {
 	margin-top: 5px;
 }
+aside#right a {
+	text-decoration: none;
+}
 
 section {
 	float: left;
-	width: calc(65% - 6px);
+	width: calc(65% - 2px);
 	height: 600px;
 }
 section iframe {
 	width: 100%;
 	height: 100%;
-	border: 3px solid red;
+	border: none;
 }
 
 footer {
-	border: 3px solid teal;
+	border-top: 3px solid white;
+	background-color: #333366;
 	clear: both;
-	padding: 20px;
+	padding: 30px;
 	text-align: center;
+}
+footer p {
+	display: inline;
+	padding: 50px;
+	font-size: 1.2em;
+	color:white;
 }
